core/include/eshi/eshi.h

/* ===========================================================================
 * Kantei (判定) — hardware capability grades.
 *
 * The grade selects a render backend. Ink is below Filament's hardware floor
 * and remains reachable on CPU-only targets. Paper uses the lightweight GL
 * backend. Brush uses direct Metal by default and Filament when that optional
 * integration is built. Gold remains reserved for specialized hardware.
 * ==========================================================================*/
typedef enum EshiGrade {
    ESHI_GRADE_INK   = 1, /**< Pure CPU / software raster. ESP32, Playdate, server. */
    ESHI_GRADE_PAPER = 2, /**< GLES 2.0 / WebGL1 class hardware. */
    ESHI_GRADE_BRUSH = 3, /**< Metal / Vulkan / DX12 class hardware. */
    ESHI_GRADE_GOLD  = 4  /**< Ray tracing cores, neural accelerators. */
} EshiGrade;
typedef enum EshiResult {
    ESHI_OK              =  0,
    ESHI_ERR_INVALID     = -1, /**< Bad argument or dead entity. */
    ESHI_ERR_UNSUPPORTED = -2, /**< Grade or feature not built in this binary. */
    ESHI_ERR_NOMEM       = -3,
    ESHI_ERR_LIMIT       = -4, /**< A fixed capacity was exhausted. */
    ESHI_ERR_STALE       = -5, /**< A scene older than the world's epoch; ignored. */
    ESHI_ERR_VERSION     = -6  /**< ABI or packed-protocol versions are incompatible. */
} EshiResult;
/* ===========================================================================
 * Native contract discovery
 *
 * EshiAbiInfo is append-only for an ABI major version. Every field is a u32 so
 * even a binding generator that cannot model platform alignment can inspect it
 * before touching one of the pointer-bearing public structures below.
 * ==========================================================================*/
typedef struct EshiAbiInfo {
    uint32_t struct_size;
    uint32_t abi_info_alignment;
    uint32_t abi_version;
    uint32_t command_protocol_version;
    uint32_t event_protocol_version;

    uint32_t pointer_size;
    uint32_t size_t_size;
    uint32_t function_pointer_size;
    uint32_t grade_size;
    uint32_t result_size;
    uint32_t entity_size;

    uint32_t config_size;
    uint32_t config_alignment;
    uint32_t config_width_offset;
    uint32_t config_height_offset;
    uint32_t config_grade_offset;
    uint32_t config_fixed_dt_offset;
    uint32_t config_seed_offset;
    uint32_t config_max_entities_offset;

    uint32_t transform_view_size;
    uint32_t transform_view_alignment;
    uint32_t transform_view_entity_offset;
    uint32_t transform_view_x_offset;
    uint32_t transform_view_y_offset;
    uint32_t transform_view_count_offset;

    uint32_t velocity_view_size;
    uint32_t velocity_view_alignment;
    uint32_t velocity_view_entity_offset;
    uint32_t velocity_view_vx_offset;
    uint32_t velocity_view_vy_offset;
    uint32_t velocity_view_count_offset;

    uint32_t collision_event_size;
    uint32_t collision_event_alignment;
    uint32_t collision_event_a_offset;
    uint32_t collision_event_b_offset;
    uint32_t collision_event_nx_offset;
    uint32_t collision_event_ny_offset;
    uint32_t collision_event_penetration_offset;

    uint32_t material_size;
    uint32_t material_alignment;
    uint32_t material_cpu_shader_offset;
    uint32_t material_source_path_offset;
    uint32_t material_package_path_offset;
    uint32_t material_uniform_data_offset;
    uint32_t material_uniform_size_offset;
} EshiAbiInfo;
/**
 * Rejects a generated binding before it touches native memory.
 *
 * The ABI major must match and this library's minor must be at least the
 * requested minor. Command and event protocols must match exactly.
 */
EshiResult eshi_abi_check(uint32_t requested_abi_version,
                          uint32_t requested_command_protocol,
                          uint32_t requested_event_protocol);
/**
 * Reports the concrete layout compiled into the loaded library.
 *
 * `out_size` is the caller's sizeof(EshiAbiInfo). The function copies only the
 * smaller of that size and the native structure, and returns ESHI_ERR_LIMIT if
 * the caller's structure is too small. At least four writable bytes are
 * required; `struct_size` then tells an older caller how much storage it needs.
 */
EshiResult eshi_abi_query(EshiAbiInfo* out_info, uint32_t out_size);
/* ===========================================================================
 * Entities
 *
 * 32-bit storage: 17-bit index + 8-bit generation. The generation makes a stale
 * handle detectable rather than silently aliasing a recycled slot. Width and
 * bit layout match Filament's utils::Entity in the vendored release so the
 * render bridge can adopt it as the shared id without a translation table.
 * ==========================================================================*/
typedef uint32_t EshiEntity;
/* ===========================================================================
 * World lifecycle
 *
 * A successful create owns exactly one world and must be paired with destroy;
 * destroying NULL is safe. A world and every borrowed pointer obtained from it
 * are thread-affine: call them only from the thread that created the world.
 * Independent worlds may be used concurrently on independent threads. The
 * diagnostic and grade-probe functions above do not require a world.
 * ==========================================================================*/
typedef struct EshiWorld EshiWorld;
typedef struct EshiConfig {
    int32_t   width;         /**< Framebuffer width in pixels. */
    int32_t   height;        /**< Framebuffer height in pixels. */
    EshiGrade grade;         /**< Requested backend tier. */
    float     fixed_dt;      /**< Simulation step. 0 selects 1/60. */
    uint64_t  seed;          /**< RNG seed. Equal seeds produce equal frames. */
    uint32_t  max_entities;  /**< 0 selects 4096. */
} EshiConfig;
/** Returns a config with every field at its documented default. */
EshiConfig eshi_config_default(void);
/* ===========================================================================
 * Entity lifecycle
 * ==========================================================================*/
EshiEntity eshi_entity_create(EshiWorld* w);
void       eshi_entity_destroy(EshiWorld* w, EshiEntity e);
int        eshi_entity_alive(const EshiWorld* w, EshiEntity e);
uint32_t   eshi_entity_count(const EshiWorld* w);
/** Collider response flags. */
typedef enum EshiColliderFlags {
    ESHI_COLLIDER_NONE    = 0,
    ESHI_COLLIDER_TRIGGER = 1u << 0, /**< Report the overlap, do not resolve it. */
    ESHI_COLLIDER_STATIC  = 1u << 1  /**< Never displaced by a resolution. */
} EshiColliderFlags;
/**
 * Axis-aligned box collider.
 *
 * @param hx,hy   Half extents.
 * @param layer   Bitmask identifying what this entity *is*.
 * @param mask    Bitmask identifying what this entity *collides with*.
 *                A pair interacts when (a.layer & b.mask) && (b.layer & a.mask).
 * @param flags   EshiColliderFlags.
 */
EshiResult eshi_collider_set(EshiWorld* w, EshiEntity e,
                             float hx, float hy,
                             uint32_t layer, uint32_t mask,
                             uint32_t flags);
/** Restitution applied on resolve. 1.0 is a perfect bounce, 0.0 absorbs. */
EshiResult eshi_collider_set_restitution(EshiWorld* w, EshiEntity e, float restitution);
/**
 * Clamps the transform to an axis-aligned range after motion integrates.
 * Generic replacement for the hand-written paddle clamping in the old Pong.
 */
EshiResult eshi_bounds_set(EshiWorld* w, EshiEntity e,
                           float min_x, float max_x,
                           float min_y, float max_y);
/* ===========================================================================
 * Collision events
 *
 * Drained by the game, not pushed to it. The engine resolves the geometry
 * generically; game-specific response (spin, speed-up, scoring, audio) reads
 * these events and reacts. There is no ResolvePaddleBounce().
 * ==========================================================================*/
typedef struct EshiCollisionEvent {
    EshiEntity a;
    EshiEntity b;
    float      nx;         /**< Contact normal, pointing from b toward a. */
    float      ny;
    float      penetration;
} EshiCollisionEvent;
/** Copies up to `max` events into `out`. Returns the number written. */
int32_t eshi_collisions_poll(EshiWorld* w, EshiCollisionEvent* out, int32_t max);
#define ESHI_MAX_SHARED_BUFFER_WORDS (1u << 24) /**< 64 MiB of u32 storage. */
/**
 * Grows the shared command buffer to at least `words` words.
 *
 * Invalidates every pointer previously returned by eshi_commands_data(), so a
 * mapped typed view must be rebuilt after this call. Callers that size the
 * buffer once at startup never see that happen. Requests above
 * ESHI_MAX_SHARED_BUFFER_WORDS return ESHI_ERR_LIMIT; allocation failures
 * return ESHI_ERR_NOMEM.
 */
EshiResult eshi_commands_reserve(EshiWorld* w, uint32_t words);
/** Base of the shared command buffer, or NULL before the first reserve. */
uint32_t* eshi_commands_data(EshiWorld* w);
uint32_t  eshi_commands_capacity(const EshiWorld* w);
/**
 * Decodes the first `word_count` words of the shared buffer.
 *
 * @param out_applied  Optional. Commands successfully applied, which on an
 *                     error is where the decoder stopped.
 * @return ESHI_OK, ESHI_ERR_STALE if a scene block was older than the world's
 *         epoch and was ignored, or an error at the first bad command.
 */
EshiResult eshi_commands_flush(EshiWorld* w, uint32_t word_count, uint32_t* out_applied);
/**
 * The same decoder over caller-owned memory.
 *
 * eshi_commands_flush() is this call against the shared buffer. A C++ host that
 * already has its own storage can skip the shared buffer entirely; Dart wants
 * the shared one, because that is the copy that never crosses the boundary.
 */
EshiResult eshi_commands_submit(EshiWorld* w, const uint32_t* words,
                                uint32_t word_count, uint32_t* out_applied);
/** Event buffers use the same limit and allocation error rules as commands. */
EshiResult      eshi_events_reserve(EshiWorld* w, uint32_t words);
const uint32_t* eshi_events_data(const EshiWorld* w);
uint32_t        eshi_events_capacity(const EshiWorld* w);
/**
 * Packs this step's events into the shared event buffer.
 *
 * @param out_words  Optional. Words written, always a whole number of records.
 * @return ESHI_OK, or ESHI_ERR_LIMIT when the buffer held only some of them —
 *         in which case the caller should grow it with eshi_events_reserve()
 *         rather than assume it saw everything. Unlike eshi_collisions_poll(),
 *         which silently truncates at `max`, overflow here is reported.
 */
EshiResult eshi_events_pack(EshiWorld* w, uint32_t* out_words);
/* ===========================================================================
 * Assets
 *
 * A 3D asset is an opaque handle. The loader, the meshes, the materials and
 * the renderable entities behind it belong to whichever backend the world
 * selected, and none of those types appear here — the boundary rule in
 * ARCHITECTURE.md §5 applies to Filament exactly as it does to SDL.
 *
 * Geometry is a capability, not a guarantee. A grade whose backend has no
 * scene — Ink, Paper, direct Metal — returns ESHI_ERR_UNSUPPORTED rather than
 * pretending to load something, so a host can ask instead of assuming.
 * ==========================================================================*/

/** An asset the backend has loaded. Zero is "no asset". */
typedef uint32_t EshiAsset;
/**
 * Loads a glTF or GLB file for this world's backend.
 *
 * Loading is separate from instancing because the expensive half — parsing,
 * decoding buffers, uploading vertex data and textures — happens once per
 * asset no matter how many copies of it a scene holds, and no matter how many
 * views draw that scene.
 *
 * Returns ESHI_ERR_UNSUPPORTED when the grade has no 3D scene,
 * ESHI_ERR_INVALID when the file is missing or is not a glTF the loader
 * accepts, and ESHI_ERR_NOMEM when the upload fails. A failed load leaves
 * `out_asset` untouched and the world renderable; it never half-loads.
 */
EshiResult eshi_asset_load(EshiWorld* w, const char* path, EshiAsset* out_asset);
/**
 * Places an instance of a loaded asset into the world's scene.
 *
 * Instances share the asset's uploaded geometry and materials; the cost of a
 * second one is a transform and a set of renderable entities, not a second
 * copy of the mesh.
 *
 * `x`, `y`, `z` position the instance, and `scale` is uniform. The convention
 * is right-handed, Y up, metres, matching glTF's own.
 */
EshiResult eshi_asset_instance(EshiWorld* w, EshiAsset asset,
                               float x, float y, float z, float scale);
/**
 * Releases an asset and every instance of it.
 *
 * Assets are also released with the world, so a host that exits does not need
 * to call this; a host that swaps scenes does.
 */
EshiResult eshi_asset_release(EshiWorld* w, EshiAsset asset);
/** Number of assets this world currently holds. Zero on grades without 3D. */
uint32_t eshi_asset_count(const EshiWorld* w);