bindings/dart/larimar/lib/src/generated/larimar_bindings_generated.dart

// AUTO GENERATED FILE, DO NOT EDIT.
// Regenerate with `dart run ffigen --config ffigen.yaml`.
// ignore_for_file: camel_case_types, non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import, unused_element, deprecated_member_use_from_same_package
import 'dart:ffi' as ffi;

/// Rejects a generated binding before it touches native memory.
///
/// The ABI major must match and this library's minor must be at least the
/// requested minor. Command and event protocols must match exactly.
@ffi.Native<ffi.Int Function(ffi.Uint32, ffi.Uint32, ffi.Uint32)>(
  symbol: 'eshi_abi_check',
)
external int _eshi_abi_check(
  int requested_abi_version,
  int requested_command_protocol,
  int requested_event_protocol,
);

EshiResult eshi_abi_check(
  int requested_abi_version,
  int requested_command_protocol,
  int requested_event_protocol,
) {
  return EshiResult.fromValue(
    _eshi_abi_check(
      requested_abi_version,
      requested_command_protocol,
      requested_event_protocol,
    ),
  );
}

/// Reports the concrete layout compiled into the loaded library.
///
/// `out_size` is the caller's sizeof(EshiAbiInfo). The function copies only the
/// smaller of that size and the native structure, and returns ESHI_ERR_LIMIT if
/// the caller's structure is too small. At least four writable bytes are
/// required; `struct_size` then tells an older caller how much storage it needs.
@ffi.Native<ffi.Int Function(ffi.Pointer<EshiAbiInfo>, ffi.Uint32)>(
  symbol: 'eshi_abi_query',
)
external int _eshi_abi_query(ffi.Pointer<EshiAbiInfo> out_info, int out_size);

EshiResult eshi_abi_query(ffi.Pointer<EshiAbiInfo> out_info, int out_size) {
  return EshiResult.fromValue(_eshi_abi_query(out_info, out_size));
}

/// Number of assets this world currently holds. Zero on grades without 3D.
@ffi.Native<ffi.Uint32 Function(ffi.Pointer<EshiWorld>)>()
external int eshi_asset_count(ffi.Pointer<EshiWorld> w);

/// Places an instance of a loaded asset into the world's scene.
///
/// Instances share the asset's uploaded geometry and materials; the cost of a
/// second one is a transform and a set of renderable entities, not a second
/// copy of the mesh.
///
/// `x`, `y`, `z` position the instance, and `scale` is uniform. The convention
/// is right-handed, Y up, metres, matching glTF's own.
@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<EshiWorld>,
    EshiAsset,
    ffi.Float,
    ffi.Float,
    ffi.Float,
    ffi.Float,
  )
>(symbol: 'eshi_asset_instance')
external int _eshi_asset_instance(
  ffi.Pointer<EshiWorld> w,
  int asset,
  double x,
  double y,
  double z,
  double scale,
);

EshiResult eshi_asset_instance(
  ffi.Pointer<EshiWorld> w,
  DartEshiAsset asset,
  double x,
  double y,
  double z,
  double scale,
) {
  return EshiResult.fromValue(_eshi_asset_instance(w, asset, x, y, z, scale));
}

/// Loads a glTF or GLB file for this world's backend.
///
/// Loading is separate from instancing because the expensive half — parsing,
/// decoding buffers, uploading vertex data and textures — happens once per
/// asset no matter how many copies of it a scene holds, and no matter how many
/// views draw that scene.
///
/// Returns ESHI_ERR_UNSUPPORTED when the grade has no 3D scene,
/// ESHI_ERR_INVALID when the file is missing or is not a glTF the loader
/// accepts, and ESHI_ERR_NOMEM when the upload fails. A failed load leaves
/// `out_asset` untouched and the world renderable; it never half-loads.
@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<EshiWorld>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<EshiAsset>,
  )
>(symbol: 'eshi_asset_load')
external int _eshi_asset_load(
  ffi.Pointer<EshiWorld> w,
  ffi.Pointer<ffi.Char> path,
  ffi.Pointer<EshiAsset> out_asset,
);

EshiResult eshi_asset_load(
  ffi.Pointer<EshiWorld> w,
  ffi.Pointer<ffi.Char> path,
  ffi.Pointer<EshiAsset> out_asset,
) {
  return EshiResult.fromValue(_eshi_asset_load(w, path, out_asset));
}

/// Releases an asset and every instance of it.
///
/// Assets are also released with the world, so a host that exits does not need
/// to call this; a host that swaps scenes does.
@ffi.Native<ffi.Int Function(ffi.Pointer<EshiWorld>, EshiAsset)>(
  symbol: 'eshi_asset_release',
)
external int _eshi_asset_release(ffi.Pointer<EshiWorld> w, int asset);

EshiResult eshi_asset_release(ffi.Pointer<EshiWorld> w, DartEshiAsset asset) {
  return EshiResult.fromValue(_eshi_asset_release(w, asset));
}

/// Clamps the transform to an axis-aligned range after motion integrates.
/// Generic replacement for the hand-written paddle clamping in the old Pong.
@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<EshiWorld>,
    EshiEntity,
    ffi.Float,
    ffi.Float,
    ffi.Float,
    ffi.Float,
  )
>(symbol: 'eshi_bounds_set')
external int _eshi_bounds_set(
  ffi.Pointer<EshiWorld> w,
  int e,
  double min_x,
  double max_x,
  double min_y,
  double max_y,
);

EshiResult eshi_bounds_set(
  ffi.Pointer<EshiWorld> w,
  DartEshiEntity e,
  double min_x,
  double max_x,
  double min_y,
  double max_y,
) {
  return EshiResult.fromValue(
    _eshi_bounds_set(w, e, min_x, max_x, min_y, max_y),
  );
}

/// Axis-aligned box collider.
///
/// @param hx,hy   Half extents.
/// @param layer   Bitmask identifying what this entity *is*.
/// @param mask    Bitmask identifying what this entity *collides with*.
/// A pair interacts when (a.layer & b.mask) && (b.layer & a.mask).
/// @param flags   EshiColliderFlags.
@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<EshiWorld>,
    EshiEntity,
    ffi.Float,
    ffi.Float,
    ffi.Uint32,
    ffi.Uint32,
    ffi.Uint32,
  )
>(symbol: 'eshi_collider_set')
external int _eshi_collider_set(
  ffi.Pointer<EshiWorld> w,
  int e,
  double hx,
  double hy,
  int layer,
  int mask,
  int flags,
);

EshiResult eshi_collider_set(
  ffi.Pointer<EshiWorld> w,
  DartEshiEntity e,
  double hx,
  double hy,
  int layer,
  int mask,
  int flags,
) {
  return EshiResult.fromValue(
    _eshi_collider_set(w, e, hx, hy, layer, mask, flags),
  );
}

/// Restitution applied on resolve. 1.0 is a perfect bounce, 0.0 absorbs.
@ffi.Native<ffi.Int Function(ffi.Pointer<EshiWorld>, EshiEntity, ffi.Float)>(
  symbol: 'eshi_collider_set_restitution',
)
external int _eshi_collider_set_restitution(
  ffi.Pointer<EshiWorld> w,
  int e,
  double restitution,
);

EshiResult eshi_collider_set_restitution(
  ffi.Pointer<EshiWorld> w,
  DartEshiEntity e,
  double restitution,
) {
  return EshiResult.fromValue(
    _eshi_collider_set_restitution(w, e, restitution),
  );
}

/// Copies up to `max` events into `out`. Returns the number written.
@ffi.Native<
  ffi.Int32 Function(
    ffi.Pointer<EshiWorld>,
    ffi.Pointer<EshiCollisionEvent>,
    ffi.Int32,
  )
>()
external int eshi_collisions_poll(
  ffi.Pointer<EshiWorld> w,
  ffi.Pointer<EshiCollisionEvent> out,
  int max,
);

@ffi.Native<ffi.Uint32 Function(ffi.Pointer<EshiWorld>)>()
external int eshi_commands_capacity(ffi.Pointer<EshiWorld> w);

/// Base of the shared command buffer, or NULL before the first reserve.
@ffi.Native<ffi.Pointer<ffi.Uint32> Function(ffi.Pointer<EshiWorld>)>()
external ffi.Pointer<ffi.Uint32> eshi_commands_data(ffi.Pointer<EshiWorld> w);

/// Decodes the first `word_count` words of the shared buffer.
///
/// @param out_applied  Optional. Commands successfully applied, which on an
/// error is where the decoder stopped.
/// @return ESHI_OK, ESHI_ERR_STALE if a scene block was older than the world's
/// epoch and was ignored, or an error at the first bad command.
@ffi.Native<
  ffi.Int Function(ffi.Pointer<EshiWorld>, ffi.Uint32, ffi.Pointer<ffi.Uint32>)
>(symbol: 'eshi_commands_flush')
external int _eshi_commands_flush(
  ffi.Pointer<EshiWorld> w,
  int word_count,
  ffi.Pointer<ffi.Uint32> out_applied,
);

EshiResult eshi_commands_flush(
  ffi.Pointer<EshiWorld> w,
  int word_count,
  ffi.Pointer<ffi.Uint32> out_applied,
) {
  return EshiResult.fromValue(_eshi_commands_flush(w, word_count, out_applied));
}

/// Grows the shared command buffer to at least `words` words.
///
/// Invalidates every pointer previously returned by eshi_commands_data(), so a
/// mapped typed view must be rebuilt after this call. Callers that size the
/// buffer once at startup never see that happen. Requests above
/// ESHI_MAX_SHARED_BUFFER_WORDS return ESHI_ERR_LIMIT; allocation failures
/// return ESHI_ERR_NOMEM.
@ffi.Native<ffi.Int Function(ffi.Pointer<EshiWorld>, ffi.Uint32)>(
  symbol: 'eshi_commands_reserve',
)
external int _eshi_commands_reserve(ffi.Pointer<EshiWorld> w, int words);

EshiResult eshi_commands_reserve(ffi.Pointer<EshiWorld> w, int words) {
  return EshiResult.fromValue(_eshi_commands_reserve(w, words));
}

/// The same decoder over caller-owned memory.
///
/// eshi_commands_flush() is this call against the shared buffer. A C++ host that
/// already has its own storage can skip the shared buffer entirely; Dart wants
/// the shared one, because that is the copy that never crosses the boundary.
@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<EshiWorld>,
    ffi.Pointer<ffi.Uint32>,
    ffi.Uint32,
    ffi.Pointer<ffi.Uint32>,
  )
>(symbol: 'eshi_commands_submit')
external int _eshi_commands_submit(
  ffi.Pointer<EshiWorld> w,
  ffi.Pointer<ffi.Uint32> words,
  int word_count,
  ffi.Pointer<ffi.Uint32> out_applied,
);

EshiResult eshi_commands_submit(
  ffi.Pointer<EshiWorld> w,
  ffi.Pointer<ffi.Uint32> words,
  int word_count,
  ffi.Pointer<ffi.Uint32> out_applied,
) {
  return EshiResult.fromValue(
    _eshi_commands_submit(w, words, word_count, out_applied),
  );
}

/// Returns a config with every field at its documented default.
@ffi.Native<EshiConfig Function()>()
external EshiConfig eshi_config_default();

@ffi.Native<ffi.Int Function(ffi.Pointer<EshiWorld>, EshiEntity)>()
external int eshi_entity_alive(ffi.Pointer<EshiWorld> w, int e);

@ffi.Native<ffi.Uint32 Function(ffi.Pointer<EshiWorld>)>()
external int eshi_entity_count(ffi.Pointer<EshiWorld> w);

/// ===========================================================================
/// Entity lifecycle
/// ==========================================================================
@ffi.Native<EshiEntity Function(ffi.Pointer<EshiWorld>)>()
external int eshi_entity_create(ffi.Pointer<EshiWorld> w);

@ffi.Native<ffi.Void Function(ffi.Pointer<EshiWorld>, EshiEntity)>()
external void eshi_entity_destroy(ffi.Pointer<EshiWorld> w, int e);

@ffi.Native<ffi.Uint32 Function(ffi.Pointer<EshiWorld>)>()
external int eshi_events_capacity(ffi.Pointer<EshiWorld> w);

@ffi.Native<ffi.Pointer<ffi.Uint32> Function(ffi.Pointer<EshiWorld>)>()
external ffi.Pointer<ffi.Uint32> eshi_events_data(ffi.Pointer<EshiWorld> w);

/// Packs this step's events into the shared event buffer.
///
/// @param out_words  Optional. Words written, always a whole number of records.
/// @return ESHI_OK, or ESHI_ERR_LIMIT when the buffer held only some of them —
/// in which case the caller should grow it with eshi_events_reserve()
/// rather than assume it saw everything. Unlike eshi_collisions_poll(),
/// which silently truncates at `max`, overflow here is reported.
@ffi.Native<ffi.Int Function(ffi.Pointer<EshiWorld>, ffi.Pointer<ffi.Uint32>)>(
  symbol: 'eshi_events_pack',
)
external int _eshi_events_pack(
  ffi.Pointer<EshiWorld> w,
  ffi.Pointer<ffi.Uint32> out_words,
);

EshiResult eshi_events_pack(
  ffi.Pointer<EshiWorld> w,
  ffi.Pointer<ffi.Uint32> out_words,
) {
  return EshiResult.fromValue(_eshi_events_pack(w, out_words));
}

/// Event buffers use the same limit and allocation error rules as commands.
@ffi.Native<ffi.Int Function(ffi.Pointer<EshiWorld>, ffi.Uint32)>(
  symbol: 'eshi_events_reserve',
)
external int _eshi_events_reserve(ffi.Pointer<EshiWorld> w, int words);

EshiResult eshi_events_reserve(ffi.Pointer<EshiWorld> w, int words) {
  return EshiResult.fromValue(_eshi_events_reserve(w, words));
}
